update gitignore new

--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -1,12 +1,9 @@
-<<<<<<< HEAD
 # Ignore semua gambar/folder images
 /static/images/
 /static/images/FoodImages/
 /*.jpg
 /*.png
 # Ignore folder dataset, model, dan virtualenv
-*.pkl
-*.h5
 venv/
 __pycache__/
-env/
+.env/
