--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -1,9 +1,6 @@
-# Ignore semua gambar/folder images
-/static/images/
-/static/images/FoodImages/
-/*.jpg
-/*.png
-# Ignore folder dataset, model, dan virtualenv
-venv/
-__pycache__/
+node_modules/
 .env
+*.log
+dist/
+build/
+.csv
