--- a/backend/package.json
+++ b/backend/package.json
@@ -19,6 +19,7 @@
     "form-data": "^4.0.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.15.1",
-    "multer": "^2.0.0"
+    "multer": "^2.0.0",
+    "string-similarity": "^4.0.4"
   }
 }
