--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "axios": "^1.9.0",
     "chart.js": "^4.4.9",
+    "string-similarity": "^4.0.4",
     "sweetalert2": "^11.22.0",
     "vue": "^3.5.13",
     "vue-router": "^4.5.1"
